--- a/angular-calendar-src/AngularCalendar/index.html
+++ b/angular-calendar-src/AngularCalendar/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="">
     <title>Stylish Portfolio - Start Bootstrap Theme</title>
     <!-- Bootstrap Core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="content/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="stylish-portfolio.css" rel="stylesheet">
+    <link href="content/stylish-portfolio.css" rel="stylesheet">
     <link href="angular-calendar-directive.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
