--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="scripts/jquery-1.9.1.min.js"></script>
+    <script src="jquery-1.9.1.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="scripts/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 
-    <script src="Scripts/angular.min.js"></script>
-    <script src="Scripts/moment.js"></script>
+    <script src="angular.min.js"></script>
+    <script src="moment.js"></script>
     <script src="angular-drag-and-drop-directive.js"></script>
     <script src="angular-calendar-directive.js"></script>
     <script src="Scripts/App/calendar-sample-app.js"></script>
