--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="">
     <title>Stylish Portfolio - Start Bootstrap Theme</title>
     <!-- Bootstrap Core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="Content/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="stylish-portfolio.css" rel="stylesheet">
+    <link href="Content/stylish-portfolio.css" rel="stylesheet">
     <link href="angular-calendar-directive.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,12 +21,12 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="jquery-1.9.1.min.js"></script>
+    <script src="Scripts/jquery-1.9.1.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="bootstrap.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
 
-    <script src="angular.min.js"></script>
-    <script src="moment.js"></script>
+    <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/moment.js"></script>
     <script src="angular-drag-and-drop-directive.js"></script>
     <script src="angular-calendar-directive.js"></script>
     <script src="Scripts/App/calendar-sample-app.js"></script>
@@ -34,7 +34,7 @@
     <!-- Custom Theme JavaScript -->
     <script>
 
-        
+
         // Closes the sidebar menu
         $("#menu-close").click(function (e) {
             e.preventDefault();
