--- a/AngularCalendar/AngularCalendar/SampleCalendars/basic-sample-calendar.html
+++ b/AngularCalendar/AngularCalendar/SampleCalendars/basic-sample-calendar.html
@@ -1,4 +1,4 @@
-﻿<h1>Basic Calendar Demo</h1>
+﻿<h1>Basic Calendar</h1>
 <br/>
 <div ng-controller="basic-calendar-controller">
     <div class="calendar-top-menu clearfix">
