--- a/AngularCalendar/AngularCalendar/basic-sample-calendar-explain.html
+++ b/AngularCalendar/AngularCalendar/basic-sample-calendar-explain.html
@@ -17,8 +17,13 @@
             basic-calendar-controller.js
         </div>
         <div class="sample-explain-btn"
-             ng-click="setSample('SampleCalendars/basic-calendar-controller-js.html')"
-             ng-class="{selected:sample.explain == 'SampleCalendars/basic-calendar-controller-js.html'}">
+             ng-click="setSample('SampleCalendars/basic-sample-calendar-styles-css.html')"
+             ng-class="{selected:sample.explain == 'SampleCalendars/basic-sample-calendar-styles-css.html'}">
+            basic-sample-calendar-styles.css
+        </div>
+        <div class="sample-explain-btn"
+             ng-click="setSample('SampleCalendars/basic-calendar-dependencies.html')"
+             ng-class="{selected:sample.explain == 'SampleCalendars/basic-calendar-dependencies.html'}">
             Dependencies
         </div>
     </div>
