--- a/AngularCalendar/AngularCalendar/index.html
+++ b/AngularCalendar/AngularCalendar/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Stylish Portfolio - Start Bootstrap Theme</title>
+    <title>Angular Calendar Directive. Mark Rodriguez.</title>
     <!-- Bootstrap Core CSS -->
     <!-- Custom CSS -->
     <!-- Custom Fonts -->
@@ -20,6 +20,7 @@
     <![endif]-->
     <link href="Content/bootstrap.min.css" rel="stylesheet">
     <link href="Content/stylish-portfolio.css" rel="stylesheet">
+    <link href="fonts/styles.css" rel="stylesheet">
     <link href="angular-calendar-directive.css" rel="stylesheet">
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
